--- a/JST/app/src/main/AndroidManifest.xml
+++ b/JST/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.JobShopTrackApp"
         tools:targetApi="31">
         <activity
-            android:name=".AddJobActivity"
+            android:name=".AddEditJobActivity"
             android:exported="false"
             android:parentActivityName=".MainActivity">
             <meta-data
