Added report page & activity, blank and need info added from DB

--- a/JST/app/src/main/AndroidManifest.xml
+++ b/JST/app/src/main/AndroidManifest.xml
@@ -21,6 +21,10 @@
                 android:value="" />
         </activity>
         <activity
+            android:name=".Report"
+            android:exported="false"
+            android:parentActivityName=".MainActivity"/>
+        <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
             android:exported="true">
